[tool.poetry]
name = "tg-bot-service"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.0"
uvicorn = "0.12.3"
fastapi = "0.62.0"

[tool.poetry.dev-dependencies]

[tool.isort]
line_length = 100
multi_line_output = 3
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
