[tool.poetry]
name = "tg-bot-service-receiver"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.0"
aiogram = "2.12.1"
pydantic = "1.8.1"
ujson = "4.0.2"
cchardet = "2.1.7"
httpx = "0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
