[tool.poetry]
name = "tg-bot-service-sender"
version = "0.1.0"
description = ""
authors = ["raisultan <ki.xbozz@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.0"
uvicorn = "0.12.3"
fastapi = "0.62.0"
aiogram = "2.12.1"
httpx = "0.17.1"
python-multipart = "^0.0.5"
asyncio = "3.4.3"
ujson = "4.0.2"
cchardet = "2.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
